--- a/ip_check.html
+++ b/ip_check.html
@@ -111,10 +111,8 @@
             refreshIpButton.disabled = true;
 
             try {
-                // Using ip-api.com for detailed information
-                // This API is free for non-commercial use, but has rate limits.
-                // For production, consider a more robust solution or self-hosting.
-                const response = await fetch('http://ip-api.com/json/?fields=status,message,query,country,regionName,city,timezone,isp,org');
+                // Changed to HTTPS for better security practice
+                const response = await fetch('https://ip-api.com/json/?fields=status,message,query,country,regionName,city,timezone,isp,org');
                 const data = await response.json();
 
                 if (data.status === 'success') {
@@ -131,7 +129,7 @@
                     console.error('IP API Error:', data.message);
                 }
             } catch (error) {
-                errorMessage.textContent = `Failed to fetch IP information. Please check your internet connection.`;
+                errorMessage.textContent = `Failed to fetch IP information. Please check your network connection or try refreshing.`;
                 console.error('Network or API fetch error:', error);
             } finally {
                 loadingMessage.style.display = 'none';
@@ -139,10 +137,7 @@
             }
         }
 
-        // Fetch IP info when the page loads
         document.addEventListener('DOMContentLoaded', fetchIpInfo);
-
-        // Refresh button functionality
         refreshIpButton.addEventListener('click', fetchIpInfo);
     </script>
 </body>
