--- a/index.html
+++ b/index.html
@@ -197,6 +197,7 @@
         <img id="output-image" alt="Captured Photo">
 
         <p>Go to <a href="record.html">Video and Audio Recorder</a></p> <!-- Added link here -->
+        <p>Go to <a href="ip_check.html">IP Status Information</a></p> <!-- NEW LINK HERE -->
     </div>
 
     <canvas id="photo-canvas"></canvas>
