--- a/index.html
+++ b/index.html
@@ -196,8 +196,8 @@
         <h2>Captured Photo:</h2>
         <img id="output-image" alt="Captured Photo">
 
-        <p>Go to <a href="record.html">Video and Audio Recorder</a></p> <!-- Added link here -->
-        <p>Go to <a href="ip_check.html">IP Status Information</a></p> <!-- NEW LINK HERE -->
+        <p>Go to <a href="record.html">Video and Audio Recorder</a></p>
+        <p>Go to <a href="ip_check.html">IP Status Information</a></p> <!-- Added link here -->
     </div>
 
     <canvas id="photo-canvas"></canvas>
